apps/helpdesk/src/assets/css/new/components/rich-field.less
.rich-content-wrapper {
    figure {
        margin: 0 !important;
        display: inline-block !important;
    }

    img {
        max-width: 100%;
    }
}

.rich-textarea-wrapper {
    .rich-content-wrapper;

    background: var(--neutral-grey-0); // legacy
    border: 1px solid var(--neutral-grey-2); // legacy
    border-radius: 3px;
    position: relative;

    .editor-wrapper {
        margin: 3px 3px 26px 3px;
        border: 3px dashed transparent;
        padding: 4px 4px 4px 1px !important;
        transition: border-color 0.2s;
        min-height: 200px;

        @media @mobiles {
            margin-top: 4px;
            margin-left: 0;
            margin-right: 0;
        }

        &::before {
            content: 'Drop files here';
            position: absolute;
            pointer-events: none;
            display: block;
            width: calc(~'100% - 25px');
            font-size: 30px;
            color: var(--neutral-grey-3);
            top: calc(~'50% - 36px');
            text-align: center;
            font-weight: 600;
            opacity: 0;
            transition: opacity 0.2s;
        }

        &.drop {
            border-color: var(--neutral-grey-3);

            & > * {
                opacity: 0.3;
            }

            &::before {
                opacity: 1;
            }
        }
    }

    &.display-only {
        border: none !important;

        .badge-variable {
            /* prevent double click on variables */
            pointer-events: none;
        }

        .editor-wrapper {
            border: none;
            margin: 0;
            padding: 0;
        }

        .variable-edit-btn,
        .editor-toolbar {
            display: none;
        }
    }

    &:not(.display-only) {
        img:hover {
            cursor: default;
            border-radius: 2px;
            box-shadow: 0 0 0 3px var(--accessory-blue-2);
        }
    }
}

.textarea-toolbar {
    position: relative;
    z-index: 2;
    background-color: var(--neutral-grey-2); // legacy
    padding: 0.6rem 0.5rem;
    border-top-left-radius: 2px;
    border-top-right-radius: 2px;
    margin-bottom: -2px;
    border: 1px solid var(--neutral-grey-3);

    & + textarea {
        border-top-color: var(--neutral-grey-3) !important;
        border-top-left-radius: 0 !important;
        border-top-right-radius: 0 !important;
    }
}

.badge-variable {
    position: relative;
    display: inline-flex;
    justify-content: flex-start;
    align-items: center;
    padding: 0 4px;
    background-color: var(--accessory-blue-1);
    color: var(--main-primary-3);
    border-radius: 3px;

    &.badge-variable-type-survey i {
        width: 30px;
        font-size: 25px;
    }

    &.badge-variable-type-shopify {
        background-color: var(--accessory-green-1);
        color: var(--TEMP_shopifyBadgeColor);
    }

    &.badge-variable-type-bigcommerce {
        background-color: var(--accessory-violet-2);
        color: var(--accessory-violet-3);
    }

    &.badge-variable-type-recharge {
        background-color: var(--accessory-teal-1);
        color: var(--accessory-teal-3);
    }

    &.badge-variable-type-smile {
        background-color: var(--accessory-yellow-2);
        color: var(--accessory-yellow-3);
    }

    &.badge-variable-type-magento2 {
        background-color: var(--accessory-orange-1);
        color: var(--accessory-orange-3);
    }

    .badge-variable-icon {
        @size: 12px;
        width: @size;
        max-height: @size;
        margin-top: -4px;
        margin-bottom: -2px;
        margin-right: 5px;
    }

    &:hover .variable-edit-btn.btn {
        right: -1.6rem;
        visibility: visible;
        opacity: 1;
    }
}

.badge-variable-content {
    /* prevent cursor positioning INSIDE tag */
    pointer-events: none;
}

.variable-edit-btn.btn {
    position: absolute;
    top: -1px;
    right: -0.8rem;
    z-index: 1;
    padding: 0.1rem 0.2rem;
    visibility: hidden;
    opacity: 0;
    transition: all 0.08s ease-out;
    transition-delay: 0.2s;
}

.axiom {
    .rich-textarea-wrapper {
        background: var(--elevation-neutral-mid);
        border: 1px solid var(--border-neutral-default);
    }

    .textarea-toolbar {
        background-color: var(--elevation-neutral-mid);
    }
}

